# QServSqlite

./: CMakeLists.txt  playerinfo.db  qserv  readme.md
GeoIP/: Makefile  cmake_install.cmake
GeoIP/libGeoIP/: GeoIPCity.c
config/: server-init.cfg
enet/: Makefile  cmake_install.cmake
fpsgame/: server.cpp
ircbot/: ircbot.cpp  ircbot.h
mod/: QCom.cpp  QCom.h  QServ.cpp  QServ.h
sqlite/: Makefile  config.status  libsqlite3.la  libtool  sqlite3  sqlite3.lo  sqlite3.pc
sqlite/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
sqlite/.libs/: libsqlite3.0.dylib  libsqlite3.lai
